EEC_InitBackup/src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Relationship_to_provider__c</fullName>
        <inlineHelpText>Relationship of the case reporter to the provider</inlineHelpText>
        <label>Relationship to provider</label>
        <picklist>
            <picklistValues>
                <fullName>Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neighbor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCR&amp;R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foster Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adoptive Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provider&apos;s Own Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provider Self Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DPH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other state agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landlord</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concerned Citizen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Police</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potential Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EEC Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Former Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FDC System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SendCaseTriageEmail__c</fullName>
        <description>Flag to indicate that a case triage email should be sent.</description>
        <label>SendCaseTriageEmail</label>
        <picklist>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recalled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shared_with_Parents__c</fullName>
        <inlineHelpText>Was this information shared with the child&apos;s parent / guardian?</inlineHelpText>
        <label>Shared with Parents</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shared_with_Provider__c</fullName>
        <inlineHelpText>Have your shared your concerns with the provider?</inlineHelpText>
        <label>Shared with Provider</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_of_Home__c</fullName>
        <label>Status of Home</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_of_Allegation__c</fullName>
        <inlineHelpText>EEC licensor would fill this out before sending to triage. This should provide suggestions to Triage Responsible.</inlineHelpText>
        <label>Summary of Allegation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Time_Event_Occured__c</fullName>
        <description>If this is related to a specific event, when did this occur?</description>
        <label>Time Event Occured</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TriageDueDate__c</fullName>
        <formula>TODAY() + 2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TriageDueDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TriageEscalationApproverEmailList__c</fullName>
        <description>The list of the most recent approvers of  a case triage escalation.</description>
        <label>TriageEscalationApproverEmailList</label>
        <length>1300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Triage_Responsible__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>User that will be / is / was in charge of the triage.</inlineHelpText>
        <label>Triage Responsible</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TriggerTriageEscalationApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that will trigger an escalation in approvals for In Triage to Escalated for the Case object.</description>
        <label>TriggerTriageEscalationApproval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unlicensed_Provider_City__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider City</label>
        <referenceTo>City__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unlicensed_Provider_Email__c</fullName>
        <label>Provider Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Unlicensed_Provider_Name__c</fullName>
        <description>Name of the provider in case of unlicensed provider</description>
        <label>Provider Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unlicensed_Provider_Phone__c</fullName>
        <label>Provider Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Unlicensed_Provider_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider Region</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select a valid Licensing Region (currently a subsidy region is selected)</errorMessage>
            <filterItems>
                <field>Region__c.RecordType.Name</field>
                <operation>contains</operation>
                <value>Licensing</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unlicensed_Provider_Street__c</fullName>
        <label>Provider Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unlicensed_Provider_Zip_Code__c</fullName>
        <label>Provider Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>When_Child_Return__c</fullName>
        <inlineHelpText>When did the child return to your program?</inlineHelpText>
        <label>When</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>When_Shared_Info__c</fullName>
        <inlineHelpText>When was this information shared with the child&apos;s parent / guardian?</inlineHelpText>
        <label>When</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>When_Shared_with_Provider__c</fullName>
        <description>When was the information shared (date or estimated date)</description>
        <inlineHelpText>When was the information shared (date or estimated date)</inlineHelpText>
        <label>When Shared with Provider</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Who_Shared_Info__c</fullName>
        <inlineHelpText>Who shared the information with the parent / guardian?</inlineHelpText>
        <label>Who</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Who_Shared_with_Provider__c</fullName>
        <description>Who did you share the information with (name)</description>
        <inlineHelpText>Who did you share the information with (name)</inlineHelpText>
        <label>Who Shared with Provider</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>With_who__c</fullName>
        <inlineHelpText>Provide the name of the parent / guardian who was contacted</inlineHelpText>
        <label>With who</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1st_Escalation_Approver_Email_Address__c</fullName>
        <description>Email address of the 1st level approver on escalated investigations. Will be used to send email alerts on rejected approvals on triage escalation approval process</description>
        <label>1st Escalation Approver Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>X1st_Escalation_Case_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Denotes the user that will be the 1st Level escalation approver on cases</description>
        <inlineHelpText>Denotes the user that will be the 1st Level escalation approver on cases</inlineHelpText>
        <label>1st Escalation Case Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Lvl1_Escalation_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X2nd_Escalation_Case_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Denotes the user that will be the 2nd Level escalation approver on cases</description>
        <inlineHelpText>Denotes the user that will be the 2nd Level escalation approver on cases</inlineHelpText>
        <label>2nd Escalation Case Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Lvl2_Escalation_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X911_By_whom__c</fullName>
        <inlineHelpText>By whom was 911 called?</inlineHelpText>
        <label>By whom</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X911_Called__c</fullName>
        <inlineHelpText>Was 911 called?</inlineHelpText>
        <label>911 Called</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X911_called_when__c</fullName>
        <inlineHelpText>When was 911 called?</inlineHelpText>
        <label>When</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <columns>PARENT.CASE_NUMBER</columns>
        <filterScope>Everything</filterScope>
        <label>All Cases</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCasesWInvestigation</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Investigation__c</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Investigation__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Open Cases with Investigation</label>
    </listViews>
    <listViews>
        <fullName>CasesInTriageForMe</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Unlicensed_Provider_Name__c</columns>
        <columns>Unlicensed_Provider_Street__c</columns>
        <columns>Unlicensed_Provider_City__c</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>In Triage</value>
        </filters>
        <filters>
            <field>Assigned_to_Me_For_Triage__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Cases In Triage For Me</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCasesWInvestigation</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Investigation__c</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Investigation__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>My Open Cases with Investigation</label>
    </listViews>
    <listViews>
        <fullName>MyProvOpenCasesWInvestigation</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Investigation__c</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Investigation__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Is_My_Provider__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Provider Cases - Open Case with Inv.</label>
    </listViews>
    <listViews>
        <fullName>MyRegionOpenCasesNoProv</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Unlicensed_Provider_Name__c</columns>
        <columns>Unlicensed_Provider_Street__c</columns>
        <columns>Unlicensed_Provider_City__c</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Is_In_My_Region__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Attached_To_Unlicensed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Region - Open Cases with Unlcd Prov.</label>
    </listViews>
    <listViews>
        <fullName>MyRegionOpenCasesWInvestigation</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Investigation__c</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Investigation__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Is_In_My_Region__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Region - Open Case with Investigation</label>
    </listViews>
    <listViews>
        <fullName>MyTeamOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Assigned_To_Me_Or_My_Subordinates__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Team - Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyTeamOpenCasesWInvestigation</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Investigation__c</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Investigation__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Assigned_To_Me_Or_My_Subordinates__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Team - Open Cases with Investigation</label>
    </listViews>
    <listViews>
        <fullName>My_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>My_Closed_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>My Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>My_Complaints</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Complaint</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Complaints</label>
    </listViews>
    <listViews>
        <fullName>My_Incidents</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Incident</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Incidents</label>
    </listViews>
    <recordTypes>
        <fullName>Complaint</fullName>
        <active>true</active>
        <businessProcess>Complaint</businessProcess>
        <description>Complaint - select this record type when capturing an complaint from a parent or a neighbor</description>
        <label>Complaint</label>
    </recordTypes>
    <recordTypes>
        <fullName>Incident</fullName>
        <active>true</active>
        <businessProcess>Incident</businessProcess>
        <description>Incident - select this record type when capturing an Incident from a Provider</description>
        <label>Incident</label>
    </recordTypes>
    <recordTypes>
        <fullName>SGLSA_Injury</fullName>
        <active>true</active>
        <businessProcess>SLGSA Injury</businessProcess>
        <description>Small and Large Group injuries reported to EEC</description>
        <label>SLGSA Injury</label>
    </recordTypes>
    <recordTypes>
        <fullName>X51A_Incident</fullName>
        <active>false</active>
        <businessProcess>Incident</businessProcess>
        <label>51A Incident</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>CPR_Provided_Yes_Requires_w_who</fullName>
        <active>true</active>
        <description>If CPR Provided field is Yes then &quot;By Whom&quot; field should not be NULL</description>
        <errorConditionFormula>AND
(ISPICKVAL(CPR_Provided__c, &quot;Yes&quot;), 
OR
(ISNULL(CPR_By_Whom__c ), ISBLANK (CPR_By_Whom__c ), CPR_By_Whom__c =&quot;&quot;))</errorConditionFormula>
        <errorDisplayField>CPR_By_Whom__c</errorDisplayField>
        <errorMessage>The person who provided CPR is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CPR_Provided_Yes_Requires_when</fullName>
        <active>true</active>
        <description>If CPR Provided field is Yes then &quot;When&quot; field should not be NULL</description>
        <errorConditionFormula>AND
(ISPICKVAL(CPR_Provided__c, &quot;Yes&quot;), 
OR
(ISNULL(CPR_When__c ), ISBLANK (CPR_When__c ), CPR_When__c =&quot;&quot;))</errorConditionFormula>
        <errorDisplayField>CPR_When__c</errorDisplayField>
        <errorMessage>If CPR was provided, then description of the timing is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Case_Can_Not_Be_On_Umbrella</fullName>
        <active>true</active>
        <description>Case should always be assigned to a Provider, not an &quot;Umbrella&quot;</description>
        <errorConditionFormula>CONTAINS( Account.RecordType.DeveloperName , &quot;Umbrella&quot;)</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>Cases must be attached to a provider (not umbrella)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Category_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Priority, &apos;--None--&apos;)
&amp;&amp;
NOT(CONTAINS($Profile.Name, &apos;Community&apos;))</errorConditionFormula>
        <errorDisplayField>Priority</errorDisplayField>
        <errorMessage>Category is a required field, you must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Child_Returned_Yes_Requires_When</fullName>
        <active>true</active>
        <description>If Child return to Program field is Yes then &quot;When&quot; field should not be NULL</description>
        <errorConditionFormula>AND
(ISPICKVAL(Child_return_to_Program__c, &quot;Yes&quot;), 
OR
(ISNULL( When_Child_Return__c  ), ISBLANK (When_Child_Return__c  ),  When_Child_Return__c  =&quot;&quot;))</errorConditionFormula>
        <errorDisplayField>When_Child_Return__c</errorDisplayField>
        <errorMessage>If child returned to the program, please provide information when this happened</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Child_Transported_Yes_Requires_By_whom</fullName>
        <active>true</active>
        <description>If Child Transported for Medical Attention field is Yes then &quot;By whom&quot; field should not be NULL</description>
        <errorConditionFormula>AND
(ISPICKVAL(Child_Transported_for_Medical_Attention__c, &quot;Yes&quot;), 
OR
(ISNULL(Med_Attention_By_whom__c), ISBLANK (Med_Attention_By_whom__c),  Med_Attention_By_whom__c=&quot;&quot;))</errorConditionFormula>
        <errorDisplayField>Med_Attention_By_whom__c</errorDisplayField>
        <errorMessage>If a child is transported offsite for medical attention, the person transporting the child is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Child_Transported_Yes_Requires_Where</fullName>
        <active>true</active>
        <description>If Child Transported for Medical Attention field is Yes then &quot;Where&quot; field should not be NULL</description>
        <errorConditionFormula>AND
(ISPICKVAL(Child_Transported_for_Medical_Attention__c, &quot;Yes&quot;), 
OR
(ISNULL(Med_AttentionWhere__c), ISBLANK (Med_AttentionWhere__c),  Med_AttentionWhere__c=&quot;&quot;))</errorConditionFormula>
        <errorDisplayField>Med_AttentionWhere__c</errorDisplayField>
        <errorMessage>If a child is transported offsite for medical attention, the location is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_required_on_a_Case</fullName>
        <active>true</active>
        <description>Contact needs to be filled in on a Case which is of type Incident/Injury/complaint when it is being via anything other than Portal (Case Origin != Web)</description>
        <errorConditionFormula>AND(OR(ISNULL( ContactId ), ISBLANK( ContactId ), ContactId =&quot;&quot;),
 OR(RecordType.Name == &apos;Incident&apos;, RecordType.Name ==&apos;SLGSA Injury&apos;),
TEXT(Origin) != &apos;Web&apos;)</errorConditionFormula>
        <errorDisplayField>ContactId</errorDisplayField>
        <errorMessage>Please select a contact.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Edit_Closed_Case</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(PRIORVALUE(Status),&quot;Closed&quot;), !ISBLANK($UserRole.Name), !CONTAINS($UserRole.Name,&apos;Director&apos;), !CONTAINS($UserRole.Name,&apos;Supervisor&apos;))</errorConditionFormula>
        <errorMessage>Edits on a closed case are not authorized, Case must first be re-opened by a Supervisor or Director to be edited.</errorMessage>
    </validationRules>
</CustomObject>